# dex

./: Cargo.toml  README.md
examples/: basic.rs
src/: agent.rs  config.rs  lib.rs  main.rs  types.rs
src/llm/: client.rs  mod.rs  openai.rs  provider.rs
src/tools/: executor.rs  fs.rs  mod.rs  shell.rs
