[package]
name = "dex"
version = "0.1.0"
edition = "2021"
authors = ["OpenClaw Agent <agent@example.com>"]
description = "A simple agent framework for CLI"
license = "MIT"
repository = "https://github.com/Codu07/dex"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Configuration
config = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Colors for terminal
colored = "2.1"

# Interactive prompts
rustyline = "14.0"

# Async trait
async-trait = "0.1"

# Regex for parsing
regex = "1.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config file parsing
toml = "0.8"

# Directory handling
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[[bin]]
name = "dex"
path = "src/main.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"
